examples/test/testpolicy10782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10782
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key39: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value35
      podSelector:
        matchLabels:
          key8: value28
          key24: value41
          key26: value35
